clients update